fix headline alignment on sponsors page

--- a/assets/stylesheets/sponsors.scss
+++ b/assets/stylesheets/sponsors.scss
@@ -200,7 +200,6 @@
 
 }
 .hero-title {
-  text-align: center;
   color: $red;
   text-transform: uppercase;
 }
